load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["bloom.go"],
    importpath = "hack.systems/util/bloom",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["bloom_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
