load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["state_hash_table.go"],
    importpath = "hack.systems/util/state_hash_table",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["state_hash_table_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
