load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["ubench.go"],
    importpath = "hack.systems/util/ubench",
    visibility = ["//visibility:public"],
    deps = ["//assert:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["ubench_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
