load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testtool.go"],
    importpath = "hack.systems/util/lockfile/testtool",
    visibility = ["//visibility:private"],
    deps = ["//lockfile:go_default_library"],
)

go_binary(
    name = "testtool",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
