load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["validate_map.go"],
    importpath = "hack.systems/util/lockfree/validate_map",
    visibility = ["//visibility:private"],
    deps = [
        "//lockfree:go_default_library",
        "@hack_systems_random//guacamole:go_default_library",
    ],
)

go_binary(
    name = "validate_map",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
