load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["rivulet_echo.go"],
    importpath = "hack.systems/util/rivulet/rivulet_echo",
    visibility = ["//visibility:private"],
    deps = ["//rivulet:go_default_library"],
)

go_binary(
    name = "rivulet_echo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
